--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -22,7 +22,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #18bc9c;
+    color: #476481;
 }
 
 h1,
@@ -42,17 +42,16 @@ hr.star-primary {
     padding: 0;
     max-width: 250px;
     border: 0;
-    border-top: solid 5px;
+    border-top: solid 3px;
     text-align: center;
 }
 
 hr.star-light:after,
 hr.star-primary:after {
-    content: "\f005";
     display: inline-block;
     position: relative;
     top: -.8em;
-    padding: 0 .25em;
+    padding: 0.25em;
     font-family: FontAwesome;
     font-size: 2em;
 }
@@ -82,7 +81,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #18bc9c;
+    background: #476481;
 }
 
 header .container {
@@ -181,7 +180,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #18bc9c;
+    background: #476481;
 }
 
 @media(max-width:767px) {
@@ -218,7 +217,8 @@ section.success {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
+    opacity: 0.95;
+    background-color: #476481;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
@@ -245,6 +245,30 @@ section.success {
     z-index: 2;
 }
 
+.bloc1 {
+    background-color: #476481;
+    color:#fff;
+    font-size:1em;
+    text-align:center;
+    padding: 90px 0px 90px 0px;
+}
+
+.bloc2 {
+    background-color: #CB2448;
+    color:#fff;
+    font-size:1em;
+    text-align:center;
+    padding: 90px 0px 90px 0px;
+}
+
+.bloc3 {
+    background-color: #2c3e50;
+    color:#fff;
+    font-size:1em;
+    text-align:center;
+    padding: 90px 0px 90px 0px;
+}
+
 @media(min-width:767px) {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
@@ -253,9 +277,9 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #fff;
+    border: solid 2px #476481;
     font-size: 20px;
-    color: #fff;
+    color: #476481;
     background: 0 0;
     transition: all .3s ease-in-out;
 }
@@ -264,9 +288,9 @@ section.success {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-    border: solid 2px #fff;
-    color: #18bc9c;
-    background: #fff;
+    border: solid 2px #476481;
+    color: #fff;
+    background: #476481;
 }
 
 .floating-label-form-group {
@@ -442,4 +466,96 @@ footer .footer-below {
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+}
+
+.bar {
+    background-color:#CB2448;
+    color:#fff;
+    padding-left:15px;
+    padding-top:0.1px;
+    padding-bottom:0.1px;
+    margin:1px;
+}
+
+.skills-legend {
+    margin-top: 20px;
+    opacity: 0.8;
+}
+
+.skills-legend::before {
+    width: 100%;
+    height: 3px;
+    position: relative;
+    content: " ";
+    display: block;
+    margin-bottom: -13px;
+    background: #C6C6C6 none repeat scroll 0% 0%;
+}
+
+.legend-left.legend::before {
+    margin-left: 0px;
+}
+
+.legend-right.legend::before {
+    margin-right: 0px;
+}
+
+.legend::before {
+    width: 3px;
+    height: 10px;
+    position: relative;
+    content: " ";
+    display: block;
+    margin: auto auto 15px;
+    background: #C6C6C6 none repeat scroll 0% 0%;
+}
+
+.clearfix::after, .container::after, .container-fluid::after, .row::after, .form-horizontal .form-group::after, .btn-toolbar::after, .btn-group-vertical > .btn-group::after, .nav::after, .navbar::after, .navbar-header::after, .navbar-collapse::after, .pager::after, .panel-body::after, .modal-footer::after {
+    clear: both;
+}
+
+.clearfix::before, .clearfix::after, .container::before, .container::after, .container-fluid::before, .container-fluid::after, .row::before, .row::after, .form-horizontal .form-group::before, .form-horizontal .form-group::after, .btn-toolbar::before, .btn-toolbar::after, .btn-group-vertical > .btn-group::before, .btn-group-vertical > .btn-group::after, .nav::before, .nav::after, .navbar::before, .navbar::after, .navbar-header::before, .navbar-header::after, .navbar-collapse::before, .navbar-collapse::after, .pager::before, .pager::after, .panel-body::before, .panel-body::after, .modal-footer::before, .modal-footer::after {
+    content: " ";
+    display: table;
+}
+
+.skills-legend div {
+    width: 25%;
+    display: inline-block;
+    font-size: 0.9em;
+    color: #A9A9A9;
+    float: left;
+}
+
+.legend-right {
+    text-align: right;
+}
+
+.legend-left:nth-child(2) span {
+    margin-left: -25px;
+}
+
+.legend-right:nth-child(3) span {
+    margin-right: -20px;
+}
+
+#language-skills .skill {
+    margin: 10px 0px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #EEE;
+}
+
+#language-skills .skill .icons {
+    width: 111px;
+    height: 14px;
+    background: transparent url("../img/star-grey.png") no-repeat scroll 0% 0%;
+}
+
+#language-skills .skill .icons-red {
+    height: 14px;
+    background: transparent url("../img/star-red.png") no-repeat scroll 0% 0%;
+}
+
+.pull-right {
+    float: right;
 }
